# mavlink_experiments

./: CameraDevice.cpp  Dockerfile  GetValuesFromCam.py  MemoryValueClass.py  NewSonyAlphaClass.py  README.md  RemCli_test.cpp  Sony_CameraDevice_Master.cpp  alpha.hpp  alpha_cam_new.xml  alpha_hack2.py  alpha_set_hack.py  boost_disable.sh  boost_enable.sh  check_python_running,py  kill_all_mavroute_ports.sh  kill_http_ports.sh  mav_test1.py  mavlink_camera_tests.py  mavlink_camera_tests_with_redEdge.py  mavlink_gcs_tests_master.py  mavlink_tests2.py  micraSense.py  new_alpha7.xml  new_alpha_cams_test.py  notes_on_performance_kernel_mods  requirements.txt  sonyCameraScreenMissionPlanner.cs  sony_140222.py  sony_160222.py  sony_210222.py  sony_220222_nophoto.py  sony_alpha7.xml  sony_new_mods.py  start_mav_router.sh  sudo_crontab  tclap_parser_alpha.cpp  tdi.py  web.py  works_prog.py  (+1 more)
abd_mav/: CMakeLists.bakup050922  CMakeLists.txt  Makefile  arg-man.hpp  defs.hpp  main.conf  main.cpp  mav-com-defs.h  mav-man.hpp  mav.hpp  mav_cmd_lib_1.hpp
app_sony_64_105_x86/: RemoteCli.cpp  abd_sony.cpp  abd_sony.h  json_file_reader.cpp  shutter_speed_adjust.cpp
drone_payload/: CMakeLists.prev  CMakeLists.txt  DronePayloadManager.cpp  DronePayloadManager.h  README.md  blocking_reader.h  boost_cam_actions.cpp  boost_serial_class.cpp  defs.hpp  focus_adjustment.h  ini_file_reader.cpp  json_file_reader.cpp  linux_serial.cpp  mav-com-defs.h  mav-man.hpp  mav.hpp  mavlink_status_msg.cpp  object_store_class.hpp  poco_get_ss.cpp  poco_script_runner.cpp  reset_usb.py  shutter_speed_adjust.cpp  (+1 more)
(+79 files in other folders)
